Bug #47807: Improve demo portal installation

--- a/ucs-school-metapackage/var/www/univention/ucsschool/demo_tiles.html
+++ b/ucs-school-metapackage/var/www/univention/ucsschool/demo_tiles.html
@@ -26,7 +26,7 @@
 						des Portals sollte dieser Fehler schnell behoben werden.
 					</p>
 
-					<h3>Informationen für Systemadministratoren:</h3>
+					<h3>Informationen für Systemadministratoren</h3>
 					<p>
 						Während der Installation von UCS@school wurde das zuvor angezeigte Portal zu Testzwecken auf Ihrem UCS Server eingerichtet und aktiviert.
 						Dort wurde eine mögliche Konfiguration eines Schulportals mit unterschiedlichen Ansichten für Lehrer, Schüler und Administratoren hinterlegt.
