--- a/ucs-school-metapackage/var/www/univention/ucsschool/demo_tiles.html
+++ b/ucs-school-metapackage/var/www/univention/ucsschool/demo_tiles.html
@@ -43,7 +43,7 @@
 					<img src="img/edit_portal.png" alt="Portal edit mask" width="100%">
 					<p>
 						Das <a href="/univention/management/#module=appcenter:appcenter:0:category:Collaboration"> Univention App Center</a> bietet viele vorkonfigurierte Services und Applikationen zur einfachen Installation
-						auf Ihrem UCS@school Server an, die den Mitarbeitern und Schülern Ihrer Schule über das Portal leicht und übersichtlich zur Verügung gestellt werden können.
+						auf Ihrem UCS@school Server an, die den Mitarbeitern und Schülern Ihrer Schule über das Portal leicht und übersichtlich zur Verfügung gestellt werden können.
 					</p>
 					<p>
 						Weitere Informationen zur Einrichtung eines Portals auf Ihrem UCS@school Server können sie der offiziellen
