Bug #47807: Move demo password to /etc/demoschool.secret

--- a/ucs-school-metapackage/var/www/univention/ucsschool/demo_tiles.html
+++ b/ucs-school-metapackage/var/www/univention/ucsschool/demo_tiles.html
@@ -33,7 +33,7 @@
 					</p>
 					<p>
 						Um die verschiedenen Ansichten auszuprobieren, melden Sie sich einfach als <em>demo_student</em>, <em>demo_teacher</em> oder <em>demo_admin</em> an Ihrer UMC an.
-						Das Passwort für die Testnutzer befinden sich in der UCR Variable <em>ucsschool/join/demo_password</em>.
+						Das Passwort für die Testnutzer befindet sich in der Datei <em>/etc/demoschool.secret</em>.
 					</p>
 					<p>
 						Für ein produktives Schulportal können die Kacheln auf zuvor bereitgestellte Services, wie Vertretungspläne, Kalender oder Eigene Dateien, weiterleiten.
