Bug #48540: fix some typos in demo portal

--- a/ucs-school-metapackage/var/www/univention/ucsschool/demo_tiles.html
+++ b/ucs-school-metapackage/var/www/univention/ucsschool/demo_tiles.html
@@ -12,23 +12,23 @@
 					<h1>Das UCS@school Demoportal</h1>
 					<p>
 						Sehr geehrter Besucher,<br>
-						sie wurden auf diese Seite weitergeleitet, da hinter der Kachel die Sie im Demoportal angeklickt
-						haben noch keine Anwendung hinterlegt wurde. Das Konzept des Portals von UCS@school sieht vor,
+						Sie wurden auf diese Seite weitergeleitet, da hinter der Kachel, die Sie im Demoportal angeklickt
+						haben, noch keine Anwendung hinterlegt wurde. Das Konzept des Portals von UCS@school sieht vor,
 						dass Sie sehr einfach weitere Links auf Anwendungen oder Dienste integrieren können.
-						Diese Anwendungen und Dienste müssen nicht zwangsläufig auf einem UCS-Server installiert sein
+						Diese Anwendungen und Dienste müssen nicht zwangsläufig auf einem UCS@school-Server installiert sein,
 						aber können es selbstverständlich.
 					</p>
 
 					<h3>Informationen für Benutzer</h3>
 					<p>
-						Sollte die Kachel, auf die Sie geklickt haben eigentlich schon auf einen bestimmten Service weiterleiten,
+						Sollte die Kachel, auf die Sie geklickt haben, eigentlich schon auf einen bestimmten Service weiterleiten,
 						sprechen Sie gerne den Betreiber dieser UCS@school-Umgebung darauf an. Dank der einfachen Konfiguration
 						des Portals sollte dieser Fehler schnell behoben werden.
 					</p>
 
 					<h3>Informationen für Systemadministratoren</h3>
 					<p>
-						Während der Installation von UCS@school wurde das zuvor angezeigte Portal zu Testzwecken auf Ihrem UCS Server eingerichtet und aktiviert.
+						Während der Installation von UCS@school wurde das zuvor angezeigte Portal zu Testzwecken auf Ihrem UCS@school-Server eingerichtet und aktiviert.
 						Dort wurde eine mögliche Konfiguration eines Schulportals mit unterschiedlichen Ansichten für Lehrer, Schüler und Administratoren hinterlegt.
 					</p>
 					<p>
@@ -38,15 +38,15 @@
 					<p>
 						Für ein produktives Schulportal können die Kacheln auf zuvor bereitgestellte Services, wie Vertretungspläne, Kalender oder Eigene Dateien, weiterleiten.
 						Die Konfiguration des Portals können Sie direkt, wie hier zu sehen, auf der Seite selbst oder in den
-						<a href="/univention/management/#module=udm:settings/portal_all:0:">Portaleinstellungen</a> des UMC Moduls Domäne durchführen.
+						<a href="/univention/management/#module=udm:settings/portal_all:0:">Portaleinstellungen</a> des UMC-Moduls <em>Domäne</em> durchführen.
 					</p>
 					<img src="img/edit_portal.png" alt="Portal edit mask" width="100%">
 					<p>
-						Das <a href="/univention/management/#module=appcenter:appcenter:0:category:Collaboration"> Univention App Center</a> bietet viele vorkonfigurierte Services und Applikationen zur einfachen Installation
-						auf Ihrem UCS@school Server an, die den Mitarbeitern und Schülern Ihrer Schule über das Portal leicht und übersichtlich zur Verfügung gestellt werden können.
+						Das <a href="/univention/management/#module=appcenter:appcenter:0:category:Collaboration">Univention App Center</a> bietet viele vorkonfigurierte Services und Applikationen zur einfachen Installation
+						auf Ihrem UCS@school-Server an, die den Mitarbeitern und Schülern Ihrer Schule über das Portal leicht und übersichtlich zur Verfügung gestellt werden können.
 					</p>
 					<p>
-						Weitere Informationen zur Einrichtung eines Portals auf Ihrem UCS@school Server können sie der offiziellen
+						Weitere Informationen zur Einrichtung eines Portals auf Ihrem UCS@school-Server können sie der offiziellen
 						<a href="https://docs.software-univention.de" target="_blank">Dokumentation</a> entnehmen.
 					</p>
 				</div>
